themes-dist/RoundedCorners/Heading_3.css
/*********************************************************
 * Heading 3
 *********************************************************/

.Heading_3 {
    padding: 1px;
    border: 0px;
}
.Heading_3 .Content {
    background-color: [[HEADER_BG_COLOR]];
    border: 1px solid #979797;
    padding: 6px;
    text-align: left;
    color: #fff;
    font-size: 110%;
    padding-left: 10px;
    margin: 0px;
}

